<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProyectoLibros</string>

    <!--Menu bottom cliemte-->
    <string name="Menu_dashboard_cl">Dashboard</string>
    <string name="Menu_subir_cl">Subir</string>
    <string name="Menu_favoritos_cl">Favoritos</string>
    <string name="Menu_cuenta_cl">Cuenta</string>
    <string name="Menu_buscar_cl">Buscar</string>

    <string name="Txt_rol">Elegir Tipo de cuenta </string>
    <string name="Btn_rol_administrador">Admin</string>
    <string name="Btn_rol_cliente">Cliente</string>
    <string name="TtxRegistroAdmin">Registro </string>

    <string name="Et_nombres">Nombres</string>
    <string name="Et_apellidos">Apellidos</string>
    <string name="Et_user">Nombre Usuario</string>
    <string name="Et_password_admin">Contraseña</string>
    <string name="Et_password_adminR">Cofirmar Contraseña</string>
    <string name="Et_email">Email</string>
    <string name="Btn_registrar_admin">Regitrarme</string>
    <string name="CerrarSesion">Cerrar Sesion</string>


    <string name="Btn_login_admin">Iniciar</string>
    <string name="Btn_registro_login">Registrarme</string>


    <string name="Btn_agregar_categoria">Agregar categoría</string>
    <string name="Txt_agregar_categoria">Agregar categoria</string>
    <string name="Et_categoria">Ingrese categoría</string>
    <string name="Agregar_categoria_BD"> Agregar</string>


    <string name="Item_nombre_cat_a">Nombre categoria</string>
    <string name="Buscar_categoria">Buscar categoria</string>


    <string name="Txt_Agregar_pdf">Agregar PDF</string>
    <string name="Et_pdf">Titulo PDF</string>
    <string name="Et_Descripcion_pdf">Descripcion PDF</string>
    <string name="Tv_categoria_libro">Categoria</string>
    <string name="Btn_subir_pdf">Subir PDF</string>

    <string name="TxtLoginAdmin">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Txt_titulo_libro">Libros</string>
    <string name="Txt_categoria_libro">Categoria</string>
    <string name="Txt_buscar_libro_admin">Buscar Libro</string>

    <string name="Txt_titulo_libro_item">Titulo Libro</string>
    <string name="Txt_descripcion_libro_item">Descripcion Libro</string>
    <string name="Txt_categoria_libro_admin">Categoria</string>
    <string name="Txt_tamanio_libro_admin">5MB</string>
    <string name="Txt_fecha_libro_admin">dd/MM/YYYY</string>

    <string name="Txt_actualizar_libro">Actualizar libro</string>
    <string name="Btn_actualizar_libro">Actualizar</string>

    <string name="Txt_detalle_libro">Detalle libro</string>

    <string name="titulo_libro_D">Titulo Libro</string>
    <string name="Txt_categoria_D">Categoria:</string>
    <string name="categoria_D"> -- </string>
    <string name="Txt_fecha_D">Fecha:</string>
    <string name="fecha_D"> -- </string>
    <string name="Txt_tamanio_D">Tamaño:</string>
    <string name="tamanio_D"> -- </string>
    <string name="Txt_vistas_D">Vistas:</string>
    <string name="vistas_D"> -- </string>
    <string name="Txt_descargas_D">Descargas:</string>
    <string name="descargas_D"> -- </string>
    <string name="Txt_paginas_D">Páginas:</string>
    <string name="paginas_D"> -- </string>
    <string name="Txt_descripcion_D">Descripción:</string>
    <string name="descripcion_D"> -- </string>

    <string name="Btn_leer_libro"> Leer </string>

    <string name="Txt_leer_libro">Lectura de libro</string>


    <!--Perfil del admin-->
    <string name="nombre_perfil">Nombres</string>
    <string name="Txt_nombres_admin">--</string>
    <string name="email_admin">Email</string>
    <string name="Txt_email_admin">--</string>
    <string name="tiempo_registro">Fecha de Creacion Cuenta</string>
    <string name="Txt_tiempo_registro">--</string>
    <string name="Txt_mas_opciones">Mas opciones</string>
    <string name="Editar_Perfil">Editar Perfil </string>
    <string name="Txt_Editar_perfil">Editar Perfil</string>

    <string name="Et_a_nombres">Nombres</string>
    <string name="Btn_Actualizar">Actualizar </string>
    <string name="Btn_descargar_libro">Descargar</string>
    <string name="Btn_favoritos_libro">Favorito</string>


    <string name="Btn_mas_vistos">Más vistos</string>
    <string name="Btn_mas_descargados">Más instalados</string>

    <string name="Txt_comentarios">Comentarios</string>
    <string name="Txt_agregar_comentario">Agregar Comentario</string>
    <string name="Et_agregar_comentario">Escriba un comentario</string>
    <string name="Btn_comentar">Comentar</string>

    <string name="Tv_nombres_c">Nombres Cliente</string>
    <string name="Tv_fecha_c">dd/MM/yyyy</string>
    <string name="Tv_comentario">Comentario de Usuario</string>

    <!--Login Google-->
    <string name="Txt_alternativa">Alternativa</string>
    <string name="Btn_login_google">Ingresar con Google</string>
    <string name="Btn_tengo_cuenta">Ya tengo cuenta</string>
    <string name="default_web_client_id">1064191765387-gqiv8qvj24n27fd3883feva9ag4bs3k1.apps.googleusercontent.com</string>


</resources>